@@ -2,7 +2,9 @@ libreplace_SRC += 	memdup.c \
 			catstr.c \
 			fexist.c \
 			ltrim.c \
-			rtrim.c
+			rtrim.c \
+			binary.c
+
 SRC += $(patsubst %,libreplace/%,$(LTLIBOBJS:.lo=.c))
 SRC += $(patsubst %,libreplace/%,$(libreplace_SRC))
 
