@@ -1,3 +1,8 @@
+2004-07-23	blytkerchan
+	* binary.c: move here from libcontain
+	* binary.h: ditto
+	* module.mk: update
+
 2004-07-22	blytkerchan
 	* module.mk: update
 	* ltrim.c: include <string.h>
